--- a/admin/scss/rexlive/rexbuilder-live/tools/_editor-tools.scss
+++ b/admin/scss/rexlive/rexbuilder-live/tools/_editor-tools.scss
@@ -7,6 +7,22 @@
   font-size: 0.8em;
 }
 
+/**
+ *  Allow medium editor placeholder only on blocks without image background
+ */
+.rexbuilder-block-data:not([data-id_image_bg_block='']) ~ .grid-stack-item-content {
+  .medium-editor-placeholder {
+    &:after {
+      opacity: 0;
+    }
+    &[data-medium-focused=true] {
+      &:after {
+        opacity: 1;
+      }
+    }
+  }
+}
+
 .medium-insert-images.medium-insert-images-left,
 .medium-insert-images-left.mediumInsert,
 .mediumInsert.small {
